# ProbioScore

./: .dockerignore  .gitattributes  .gitignore  ACCEPTANCE_TESTS_E1_E15.tsv  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  FINAL_RELEASE_MANIFEST.tsv  FREEZE_INVARIANTS_E1_E8.tsv  LICENSE  MANIFEST.in  README.md  TECHNICAL_INSTALLATION_AND_USER_GUIDE.md  environment.yml  pyproject.toml  run_probioscore.bat  run_probioscore.sh
.github/workflows/: ci.yml
benchmarks/internal_1103_reference/: true_fce_results_I45.tsv
benchmarks/ounissi_48_reference/: ounissi48_true_fce_results_I45.tsv
examples/run_on_panel_600/: README.md  score_external_panel_600.sh
examples/run_on_single_v4_output/: README.md  score_single_genome.sh
probioscore/cli/: run_probioscore.py
probioscore/config/: ahp_fce_base_config.json  ahp_weights.json  benchmark_curated_config.tsv  input_schema_consolidated_i31_i45.tsv  prospective_frozen_config.tsv  selected_thresholds_lockfile_v1.json
probioscore/curated_tables/: CURATED_TABLES_MANIFEST.tsv  curated_release_exception_v2.tsv  curated_strain_level_probiotic_evidence.tsv  gold_standard_curated_labels.tsv  neutral_or_environmental_taxon_prior.tsv  risk_reclassification_curated.tsv
probioscore/docs/: METHODOLOGY_BENCHMARK_CURATED.md  METHODOLOGY_PROSPECTIVE_FROZEN.md  SCHEMA_CONTRACT_V4.md  WEIGHTS_PROVENANCE.md
probioscore/engine/: __init__.py  consolidated_engine.py  true_fce_engine.py
scripts/: build_release_zip.py  regenerate_manifest.py  run_acceptance_tests_E1_E15.py  score_external_v4_outputs.py  verify_freeze_invariants.py
(+7 files in other folders)
